popravljen html za poste

--- a/views/registracija1.html
+++ b/views/registracija1.html
@@ -47,8 +47,8 @@
 				<label for="inputState" class="form-text">Pošta</label>
 				<select id="inputState" class="form-control" required>
 					<option selected>Izberi..</option>
-					%for posta in poste:
-						<option value="posta">{{posta}}</option></a></li>
+					%for postna_st in postne_st:
+						<option value="posta">{{postna_st}}</option></a></li>
 					%end
 				</select>
 			</div>
