--- a/static/idealni_psi.css
+++ b/static/idealni_psi.css
@@ -13,9 +13,8 @@ h1 {
 }
 
 div#vsebina {
-    margin-left: 50px;
-    margin-right: 50px;
-	margin-top: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 div#glava {
@@ -40,16 +39,14 @@ div#sporocilo {
     padding: 5px;
 }
 
-.box {
-		float: center;
-		width: 800px;
-		margin-left: 10px;
-		margin-top: 10px;
-		padding: 5px;
-		border: 1px solid gray;
-	}
-	
+#tabela table, tr, td, th {
+     border: 0;
+	 background-color: White;
+	 padding: 15px;
+	 width: 800px;
+}
+
 img {
-    max-width: 400px;
-    max-height: 300px;
+    max-width: 100%;
+    max-height: 100%;
 }
